--- a/package.json
+++ b/package.json
@@ -8,13 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
+    "@next-auth/firebase-adapter": "^0.1.2",
+    "draft-js": "^0.11.7",
+    "firebase": "^8.7.1",
+    "mui-rte": "^1.29.0",
     "next": "latest",
+    "next-auth": "^3.27.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4"
   },
   "devDependencies": {
+    "@types/react": "^17.0.14",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "tailwindcss": "^2.2.4",
+    "typescript": "^4.3.5"
   }
 }
